force-app/main/default/objects/KRoom__c/KRoom__c.object-meta.xml
<CustomObject>
    <label>KRoom</label>
    <nameField>
        <displayFormat>R-{000}</displayFormat>
        <label>RoomNumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KRooms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>