force-app/main/default/objects/KRoom__c/fields/KHotel__c.field-meta.xml
<CustomField>
    <fullName>KHotel__c</fullName>
    <label>KHotel</label>
    <referenceTo>KHotel__c</referenceTo>
    <relationshipLabel>KRooms</relationshipLabel>
    <relationshipName>KRooms</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>