force-app/main/default/objects/KRoom__c/fields/Tariff__c.field-meta.xml
<CustomField>
    <fullName>Tariff__c</fullName>
    <formula>IF(ISPICKVAL(Occupancy__c,&apos;Single&apos;),100,
IF(ISPICKVAL(Occupancy__c,&apos;Double&apos;),300,
IF(ISPICKVAL(Occupancy__c,&apos;Executive&apos;),650,

IF(ISPICKVAL(Occupancy__c,&apos;Deluxe&apos;),1000,
500)
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tariff</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>