force-app/main/default/objects/KRoom__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>KHotel__c</columns>
    <columns>NAME</columns>
    <columns>Occupancy__c</columns>
    <columns>Tariff__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>